--- a/yaml/cookbook/ele_salarykit_report.yml
+++ b/yaml/cookbook/ele_salarykit_report.yml
@@ -18,21 +18,22 @@ ele_month_env:
     # 运单详情
     - ele_month_57_std
     # 20BKPI管理-站点指标明细-问题单
-#    - ele_month_33_std
-    - ele_day_32_std
+    - ele_month_33_std
+#    - ele_day_32_std
     # 违规扣款与申诉返款账单
-    - ele_day_36_std
+    - ele_month_36_std_salary
 
 
     # 给薪资组提供的中间表如下：
     # ele_order_num_allowance_monthly 订单数量
     # ele_order_time_monthly 时段单量
-    # ele_comment_good_order_monthly 服务奖惩评价好评（备注：有时差）
-    # ele_orderdetails_good_order_monthly 运单详好评（备注：有时差）
+    # ele_comment_good_order_monthly 服务奖惩评价好评（备注：有时差问他;已转换为数字）
+    # ele_orderdetails_good_order_monthly 运单详好评（备注：有时差问他;已转换为数字）
     # ele_bad_order_monthly 差评单汇总（服务奖惩，配送费，KPI管理问题单）
     # ele_overtime_order_monthly 超时单汇总（运单详情，配送费，KPI管理问题单）
     # ele_forfeit_order_monthly 违规扣款
     # ele_refund_order_monthly 申诉返款
+                  
   play:
     # ===== 创建欺诈单表 -> 20201111
     # 2020.12.24 由于月数据是每个月3日才有，所以采用日累计的数据源生成欺诈单
@@ -40,13 +41,24 @@ ele_month_env:
       sync_result: true
       cooks:
         - fetch_dataset:
+            dataset_type_code: ele_month_36_std_salary
+            dataset_cate: std
+            month_offset: -1
+            ignore_null_error: true
+            columns: [运单号,业务类型]
+        - when_empty_fetch_dataset:
             dataset_type_code: ele_day_36_std
             dataset_cate: std
+            month_offset: -1
             ignore_null_error: true
-            month_range: true
-            month_delta: -1
-            month_offset: 0
             columns: [运单号,业务类型]
+        - stash_push_df: []
+        - use_df:
+            key: ele_month_36_std_salary
+            columns: [运单号,业务类型]
+        - stash_push_df: []
+        - stash_concat_df:
+            drop_stash: true
         - df_select:
             - '[业务类型] == @p1'
             - p1: 欺诈单
@@ -63,12 +75,12 @@ ele_month_env:
         #薪资方案的意思是没有信息的都是以配送费为主，匹配
         #2020.12.24 姜雪确认评价日数据是累计的，所以月初第一天月数据和日数据是一样的。
         - use_df:
-            key: ele_day_32_std
+            key: ele_month_33_std
             columns: [运单号, 问题单类型]
         - stash_push_df: []
         - use_df:
             key: ele_month_58_std
-            columns: [运单号, 加盟商ID,骑手ID,站点ID]
+            columns: [运单号,骑手ID,骑手,站点ID,站点,加盟商ID]
         - stash_push_df: []
         - stash_join_df:
             on: 运单号
@@ -83,6 +95,7 @@ ele_month_env:
 
 
     # 饿了么薪资组计算报表
+    # 2021.3.29 新增骑手和商圈信息，实验场测试OK
     - name: ele_month_58_std_complete_order
       sync_result: true
       cooks:
@@ -115,8 +128,9 @@ ele_month_env:
             drop_stash: true
         # 匹配欺诈单 end ======
 
-    # 运单详情上个月月末两天的数据
+    # 目的：因为评价会有滞后性，可能上个月的运单，但下个月才评价；目前薪资要求至少是月末两天。
     # 本次做了修改，取上个月整月的------20201211
+    # 2021.3.29 新增骑手和商圈信息，实验场测试OK
     - name: ele_month_57_std_last_month_two_days
       sync_result: true
       cooks:
@@ -139,6 +153,7 @@ ele_month_env:
         - df_select:
             - '[运单送达日期] % 100  > [本月总天数] - 2'
      #新增团队关系表测试，为后期自动下载和自动算新准备
+     # 如果supplierid出现空白导致自动导出失效，那么可以对两个表同时增加相同列，进行supplierid的关联
     - name: std_qplus_dc_ele_revenue
       sync_result: true
       cooks:
@@ -181,15 +196,15 @@ ele_month_env:
         - dask_apply_dtypes:
             dtypes:
               加盟商ID: unicode
-    # 统计完成单量、出勤天数、补贴
-
+    # 统计完成单量、出勤天数、补贴 done
+    # 2021.3.29 新增骑手和商圈信息，实验场测试OK
     - name: ele_order_num_allowance_monthly
       sync_result: true
       cooks:
         # 统计完成单量和出勤天数
         - use_df:
             key: ele_month_58_std_complete_order
-            columns: [站点ID, 骑手ID, 订单号, 日期, 时段补贴, 距离补贴, 重量补贴,欺诈单,加盟商ID]
+            columns: [站点ID,站点,骑手ID, 骑手,订单号, 日期, 时段补贴, 距离补贴, 重量补贴,欺诈单,加盟商ID]
             rename:
               订单号: order_id
               时段补贴: time_allowance
@@ -201,7 +216,7 @@ ele_month_env:
             - p1: 欺诈单
         # 剔除欺诈单 end ======
         - df_groupby:
-            by: [日期, 骑手ID, 站点ID,加盟商ID]
+            by: [日期, 骑手ID, 骑手,站点ID,站点,加盟商ID]
         - df_agg:
             - order_id: count
               time_allowance: sum
@@ -210,7 +225,7 @@ ele_month_env:
         - add_cols:
             - 出勤天数: 1
         - df_groupby:
-            by: [站点ID, 骑手ID,加盟商ID]
+            by: [骑手ID, 骑手,站点ID,站点,加盟商ID]
         - df_sum:
             column: [order_id, time_allowance, distance_allowance, weight_allowance, 出勤天数]
         - df_reset_index: []
@@ -219,6 +234,7 @@ ele_month_env:
               time_allowance: 时段补贴
               distance_allowance: 距离补贴
               weight_allowance: 重量补贴
+
         #关联团队关系表2020.12.24，用于后端调用使用，暂时采用原表测试。之后需要重新构建团队关系表
         - stash_push_df: []
         - use_df:
@@ -234,14 +250,15 @@ ele_month_env:
           #关联团队关系表2020.12.24，用于后端调用使用，暂时采用原表测试。 end
 
     # 算薪报表数据
-    # 统计配送费账单中的早午晚单量 提取日期时间中的时间信息
+    # 统计配送费账单中的早午晚单量 提取日期时间中的时间信息 done
     # 按照骑手、商圈、半小时进行聚合
+    # 2021.3.29 新增骑手和商圈信息，实验场测试OK
     - name: ele_order_time_monthly
       sync_result: true
       cooks:
         - use_df:
             key: ele_month_58_std_complete_order
-            columns: [骑手ID, 站点ID,  运单号, time_segment_no,欺诈单,加盟商ID]
+            columns: [骑手ID, 骑手,站点ID,站点, 运单号, time_segment_no,欺诈单,加盟商ID]
         # ======剔除欺诈单 -> 20201113
         - df_select:
             - '[欺诈单] != @p1'
@@ -249,7 +266,7 @@ ele_month_env:
         # 剔除欺诈单 end ======
         # 聚合时间段内的单量
         - df_groupby:
-            by: [骑手ID, 站点ID,time_segment_no,加盟商ID]
+            by: [骑手ID,骑手,站点ID,站点,time_segment_no,加盟商ID]
         - df_count:
             column: 运单号
             rename: 该时间段内的完成单量
@@ -269,6 +286,7 @@ ele_month_env:
                 df[u'时间段'] = df[u'time_segment_no'].apply(lambda k: labels.get(k))
                 result = df
 
+
         # 关联团队关系表2020.12.24，用于后端调用使用
         - stash_push_df: []
         - use_df:
@@ -284,6 +302,7 @@ ele_month_env:
 
 
     # 服务奖惩评价的好评
+    # 2021.3.17增加商圈和骑手姓名done
     - name: ele_comment_good_order_monthly
       sync_result: true
       cooks:
@@ -291,7 +310,7 @@ ele_month_env:
         #-------新增下载城市列------2020.12.10
         - use_df:
             key: ele_month_59_std
-            columns: [团队,骑手ID,运单号,骑手信息, 评价等级, 评价来源, 评价日期,判定状态,申述状态,下载城市]
+            columns: [站点,骑手ID,运单号,骑手信息, 评价等级, 评价来源, 评价日期,判定状态,申述状态,下载城市]
         - df_select:
             - '[评价等级] == @p1'
             - p1: 非常满意
@@ -301,6 +320,15 @@ ele_month_env:
         - df_select:
             - '[申述状态] != @p1'
             - p1: 二审通过
+        # 2021.3.17修改，对骑手信息进行切片，只保留姓名
+        - run_py:
+            - |
+              df= to_df(df)
+              fn=lambda x: x.split("(")[0]
+              df[u'骑手信息']=df[u'骑手信息'].apply(fn)
+              result = to_dd(df)
+        - rename_cols:
+            - 骑手信息: 骑手
         - stash_push_df: []
         - fetch_dataset:
             dataset_type_code: ele_month_57_std
@@ -354,21 +382,22 @@ ele_month_env:
             on: 下载城市
             how: right
             drop_stash: true
+       # 选取部分列，并排序
         - push_dataset:
             key: middle
         - use_df:
             key: middle
-            columns: [supplier_id,加盟商ID,city_code,下载城市,运单号,骑手ID, 骑手信息,团队,评价等级, 评价来源, 申述状态, 判定状态, 评价间隔(小时),评价间隔(天)]
+            columns: [supplier_id,加盟商ID,city_code,下载城市,运单号,骑手ID, 骑手,站点,评价等级, 评价来源, 申述状态, 判定状态, 评价间隔(小时),评价间隔(天)]
 
 
-
+ # 2021.3.17新增团队和骑手信息
     - name: ele_orderdetails_good_order_monthly
       sync_result: true
       cooks:
         # 运单详情中的好评单
         - use_df:
             key: ele_month_57_std
-            columns: [站点ID, 骑手ID,运单号, 运单送达时间, 用户评价状态,下载城市,是否T+2用户评价]
+            columns: [站点ID,站点, 骑手ID,骑手,运单号, 运单送达时间, 用户评价状态,下载城市,是否T+2用户评价]
         - df_select:
             - '[用户评价状态] == @p1'
             - p1: 非常满意
@@ -420,8 +449,8 @@ ele_month_env:
       cooks:
         # 提取违规账单
         - use_df:
-            key: ele_day_36_std
-            columns: [账单时间,站点ID,骑手ID,骑手名称,金额,账单类型,业务类型,详情,订单号,运单号,加盟商ID]
+            key: ele_month_36_std_salary
+            columns: [账单时间,站点ID,站点,骑手ID,骑手,金额,账单类型,业务类型,详情,订单号,运单号,加盟商ID]
         - df_select:
             - '[账单类型] == @p1'
             - p1: 违规扣款
@@ -444,12 +473,13 @@ ele_month_env:
       cooks:
         # 提取申述返款账单
         - use_df:
-            key: ele_day_36_std
-            columns: [加盟商ID,账单时间,站点ID,骑手ID,骑手名称,金额,账单类型,业务类型,详情,订单号,运单号]
+            key: ele_month_36_std_salary
+            columns: [加盟商ID,账单时间,站点ID,站点,骑手ID,骑手,金额,账单类型,业务类型,详情,订单号,运单号]
         - df_select:
             - '[账单类型] == @p1'
             - p1: '申诉返款'
-        #关联团队关系表2020.12.24，用于后端调用使用
+
+        #关联团队关系表2020.12.24，用于前端调用使用
         - stash_push_df: []
         - use_df:
             key: std_qplus_dc_ele_revenue
@@ -470,15 +500,15 @@ ele_month_env:
         # 配送费中的超时单量
         - use_df:
             key: ele_month_58_std
-            columns: [运单号,业务类型, 骑手ID, 站点ID,详情,加盟商ID]
+            columns: [运单号,业务类型, 骑手ID,骑手, 站点ID,站点,详情,加盟商ID]
         - df_select:
             - '[业务类型] == @p1 & [详情] == @p2'
             - p1: 配送收入
               p2: 完成单-超时
-        - rename_cols:
-            - 详情: 详情_配送费账单
+#        - rename_cols:
+#            - 详情: 详情_配送费账单
         - add_cols:
-            - 配送费账单_详情_完成单超时: 1
+            - 超时路径: 配送费完成单超时
         #关联团队关系表2020.12.24，用于后端调用使用
         - stash_push_df: []
         - use_df:
@@ -491,21 +521,28 @@ ele_month_env:
             on: 加盟商ID
             how: right
             drop_stash: true
+        # 2021.3.17 修改。做一个排序，去掉两个无用列
+        - push_dataset:
+            key: middle
+        - use_df:
+            key: middle
+            columns: [运单号,骑手ID,骑手, 站点ID,站点,超时路径,city_code,下载城市, supplier_id,加盟商ID]
 
+   # 2021.3.29 新增骑手和站点信息，实验场测试OK
     - name: ele_KPI_overtime_order_monthly
       sync_result: true
       cooks:
         # KPI管理问题单T+12超时
         - use_df:
             key: ele_month_33_std_plus
-            column: [运单号, 问题单类型,加盟商ID,骑手ID,站点ID]
+            column: [运单号, 问题单类型,加盟商ID,骑手ID,骑手,站点ID,站点]
         - df_select:
             - '[问题单类型] in @p1'
             - p1: [超时,骑手T+12超时]
-        - rename_cols:
-            - 问题单类型: 问题单类型_骑手T12超时_KPI管理站点明细问题单
+#        - rename_cols:
+#            - 问题单类型: 详情
         - add_cols:
-            - 骑手T_12超时_KPI管理站点明细问题单: 1
+            - 超时路径: KPI问题单
         #关联团队关系表2020.12.24，用于后端调用使用
         - stash_push_df: []
         - use_df:
@@ -518,20 +555,26 @@ ele_month_env:
             on: 加盟商ID
             how: right
             drop_stash: true
-
+       # 2021.3.17 修改。做一个排序，去掉两个无用列
+        - push_dataset:
+            key: middle
+        - use_df:
+            key: middle
+            columns: [运单号,骑手ID,骑手, 站点ID,站点,问题单类型,超时路径,city_code,下载城市, supplier_id,加盟商ID]
        #运单详情超时
+
     - name: ele_deliverydetails_overtime_order_monthly
       sync_result: true
       cooks:
         - use_df:
             key: ele_month_57_std
-            columns: [运单号, 骑手T超时时长,下载城市,站点ID,骑手ID]
+            columns: [运单号, 骑手T超时时长,下载城市,站点ID,站点,骑手ID,骑手]
         - df_py_select:
             - 'df[u"骑手T超时时长"].str.contains(u"超时")'
-        - rename_cols:
-            - 骑手T超时时长: 骑手T超时时长_运单详情
+#        - rename_cols:
+#            - 骑手T超时时长: 骑手T超时时长_运单详情
         - add_cols:
-            - 运单详情_骑手T超时时长: 1
+            - 超时路径: 运单详情
         #关联团队关系表2020.12.24，用于后端调用使用
         - stash_push_df: []
         - use_df:
@@ -549,18 +592,19 @@ ele_month_env:
 
 
     # 差评单三个路径之一；KPI差评
+    # 2021.3.29 新增骑手和站点信息，实验场测试OK
     - name: ele_KPI_bad_order_monthly
       sync_result: true
       cooks:
         # KPI管理中的差评
         - use_df:
             key: ele_month_33_std_plus
-            columns: [运单号, 问题单类型,骑手ID,加盟商ID,站点ID]
+            columns: [运单号, 问题单类型,骑手ID,加盟商ID,骑手,站点ID,站点]
         - df_select:
             - '[问题单类型] == @p1'
             - p1: 差评
-        - rename_cols:
-            - 问题单类型: KPI管理_差评
+        - add_cols:
+            - 差评路径: KPI管理
           #关联团队关系表2020.12.25，用于后端调用使用
         - stash_push_df: []
         - use_df:
@@ -581,13 +625,15 @@ ele_month_env:
         # 配送费账单中的差评
         - use_df:
             key: ele_month_58_std
-            columns: [运单号,业务类型, 详情,站点ID,骑手ID,加盟商ID]
+            columns: [运单号,业务类型, 详情,站点ID,站点,骑手ID,骑手,加盟商ID]
         - df_select:
             - '[业务类型] == @p1 & [详情] == @p2'
             - p1: 配送收入
               p2: 差评
-        - rename_cols:
-            - 详情: 配送费账单_差评
+#        - rename_cols:
+#            - 详情: 配送费账单_差评
+        - add_cols:
+            - 差评路径: 配送费
         #关联团队关系表2020.12.25，用于后端调用使用
         - stash_push_df: []
         - use_df:
@@ -618,7 +664,7 @@ ele_month_env:
         - stash_push_df: []
         - use_df:
             key: ele_month_59_std
-            columns: [团队,骑手ID,运单号, 骑手信息, 评价等级, 评价来源, 申述状态, 判定状态, 评价日期,下载城市]
+            columns: [站点,骑手ID,运单号, 骑手信息, 评价等级, 评价来源, 申述状态, 判定状态, 评价日期,下载城市]
         - df_select:
             - '[评价等级] == @p1'
             - p1: '吐槽'
@@ -628,8 +674,18 @@ ele_month_env:
         - df_select:
             - '[判定状态] != @p1'
             - p1: '无效'
+#        - rename_cols:
+#            - 评价等级: 服务奖惩评价_吐槽
+        - run_py:
+            - |
+              df= to_df(df)
+              fn=lambda x: x.split("(")[0]
+              df[u'骑手信息']=df[u'骑手信息'].apply(fn)
+              result = to_dd(df)
+        - add_cols:
+            - 差评路径: 服务奖惩评价
         - rename_cols:
-            - 评价等级: 服务奖惩评价_吐槽
+            - 骑手信息: 骑手
         - stash_push_df: []
         - stash_join_df:
             on: 运单号
@@ -670,70 +726,70 @@ ele_month_env:
             key: middle
         - use_df:
             key: middle
-            columns: [supplier_id,加盟商ID,city_code,下载城市,运单号,骑手ID, 骑手信息,团队,站点ID, 服务奖惩评价_吐槽, 评价来源, 申述状态, 判定状态, 评价间隔(小时),评价间隔(天)]
+            columns: [supplier_id,加盟商ID,city_code,下载城市,运单号,骑手ID, 骑手,站点,站点ID, 差评路径, 评价来源, 申述状态, 判定状态, 评价间隔(小时),评价间隔(天)]
     # 2021/2/22优化，为解决自动导出时的bug，对时区计算做了一些修改。同时，规定了输出的字段和顺序。结束
 
 
-
+# 2021.3.30 后续”马洪涛“自动算薪脚本调用部分，目前为节省运行资源，暂时注掉
    # 超时单详情汇总
-    - name: ele_overtime_order_monthly
-      sync_result: true
-      cooks:
-        # 配送费中的超时单量
-        - use_df:
-            key: ele_deliveryfee_overtime_order_monthly
-        - stash_push_df: []
-        # KPI管理问题单T+12超时
-        - use_df:
-            key: ele_KPI_overtime_order_monthly
-        - stash_push_df: []
-        - stash_concat_df:
-            drop_stash: true
-        - stash_push_df: []
-        # 运单详情中的超时时长
-        - use_df:
-            key: ele_deliverydetails_overtime_order_monthly
-        - stash_push_df: []
-        - stash_concat_df:
-            drop_stash: true
-        # ======匹配欺诈单 -> 20201110
-        - stash_push_df: []
-        - use_df:
-            key: ele_month_37_std_cheat
-        - stash_push_df: []
-        - stash_join_df:
-            on: 运单号
-            how: right
-            drop_stash: true
-        # 匹配欺诈单 end ======
-
-    # 差评单详情concat汇总
-    - name: ele_bad_order_monthly
-      sync_result: true
-      cooks:
-        # 服务奖惩的评价中的差评
-        - use_df:
-            key: ele_KPI_bad_order_monthly
-        - stash_push_df: []
-        - use_df:
-            key: ele_deliveryfee_bad_order_monthly
-        - stash_push_df: []
-        - stash_concat_df:
-            drop_stash: true
-        - stash_push_df: []
-        - use_df:
-            key: ele_servicecomment_bad_order_monthly
-        - stash_push_df: []
-        - stash_concat_df:
-            drop_stash: true
-        - stash_push_df: []
-        # 匹配欺诈单 begin ======
-        - use_df:
-            key: ele_month_37_std_cheat
-        - stash_push_df: []
-        - stash_join_df:
-            on: 运单号
-            how: right
-            drop_stash: true
-        # 匹配欺诈单 end ======
+#    - name: ele_overtime_order_monthly
+#      sync_result: true
+#      cooks:
+#        # 配送费中的超时单量
+#        - use_df:
+#            key: ele_deliveryfee_overtime_order_monthly
+#        - stash_push_df: []
+#        # KPI管理问题单T+12超时
+#        - use_df:
+#            key: ele_KPI_overtime_order_monthly
+#        - stash_push_df: []
+#        - stash_concat_df:
+#            drop_stash: true
+#        - stash_push_df: []
+#        # 运单详情中的超时时长
+#        - use_df:
+#            key: ele_deliverydetails_overtime_order_monthly
+#        - stash_push_df: []
+#        - stash_concat_df:
+#            drop_stash: true
+#        # ======匹配欺诈单 -> 20201110
+#        - stash_push_df: []
+#        - use_df:
+#            key: ele_month_37_std_cheat
+#        - stash_push_df: []
+#        - stash_join_df:
+#            on: 运单号
+#            how: right
+#            drop_stash: true
+#        # 匹配欺诈单 end ======
+#
+#    # 差评单详情concat汇总
+#    - name: ele_bad_order_monthly
+#      sync_result: true
+#      cooks:
+#        # 服务奖惩的评价中的差评
+#        - use_df:
+#            key: ele_KPI_bad_order_monthly
+#        - stash_push_df: []
+#        - use_df:
+#            key: ele_deliveryfee_bad_order_monthly
+#        - stash_push_df: []
+#        - stash_concat_df:
+#            drop_stash: true
+#        - stash_push_df: []
+#        - use_df:
+#            key: ele_servicecomment_bad_order_monthly
+#        - stash_push_df: []
+#        - stash_concat_df:
+#            drop_stash: true
+#        - stash_push_df: []
+#        # 匹配欺诈单 begin ======
+#        - use_df:
+#            key: ele_month_37_std_cheat
+#        - stash_push_df: []
+#        - stash_join_df:
+#            on: 运单号
+#            how: right
+#            drop_stash: true
+#        # 匹配欺诈单 end ======
 
