--- a/财报/21年财报/cookbook/code/clean_lailai/region.yml
+++ b/财报/21年财报/cookbook/code/clean_lailai/region.yml
@@ -9,7 +9,7 @@ dataset_pipeline:
   - df_select:
       - '[industry_id] == @v1 & [platform_id] in @v2'
       - v1: bao_jie
-        v2: [lailai]
+        v2: [lailai,kfcdayang,mcdayang]
   - set_meta_days_by_column:
       src_column: book_month
       dest_column: month_days
