--- a/yaml/cookbook/dc_cost_dataset_mt.yml
+++ b/yaml/cookbook/dc_cost_dataset_mt.yml
@@ -22,12 +22,12 @@ mt_daily_env:
       cooks:
         - use_df:
             key: mt_dc_cost_t2
-            columns: [dc_id, 单成本,工资单成本]
+            columns: [单成本,工资单成本]
             index: dc_id
         - stash_push_df: []
         - use_df:
             key: mt_worker_order_common_kpi_by_daily_t2
-            columns: [日期, dc_id, 骑手ID, 完成单量]
+            columns: [日期, 骑手ID, 完成单量]
             index: dc_id
         - stash_push_df: []
         - stash_join_df:
