--- a/财报/21年财报/cookbook/code/logistics/project.yml
+++ b/财报/21年财报/cookbook/code/logistics/project.yml
@@ -1,4 +1,3 @@
-
 dataset_vis:
   vis_grid:
     columns: []
@@ -159,6 +158,7 @@ dataset_pipeline:
         Q-2010102: 0
         C-10101: 0
         C-10102: 0
+        Q-20704: 0
   - df_fillna:
       value: 0.0
 
@@ -176,7 +176,7 @@ dataset_pipeline:
                 {{Q-202}} = {{Q-20201}} + {{Q-20202}} + {{Q-20203}} + {{Q-20204}}
                 {{Q-205}} = {{Q-20501}} + {{Q-20502}}
                 {{Q-206}} = {{Q-20601}} + {{Q-20604}} + {{Q-20605}}
-                {{Q-207}} = {{Q-20701}} + {{Q-20702}}
+                {{Q-207}} = {{Q-20701}} + {{Q-20702}} + {{Q-20704}}
                 {{CS-1034}} = {{C-103}} + {{C-104}}
                 {{QS-10101014}} = {{Q-1010101}} + {{Q-1010102}} + {{Q-1010103}} + {{Q-1010104}}
                 {{QS-2017}} = {{Q-20101}} + {{Q-202}} + {{Q-205}} + {{Q-206}} + {{Q-207}}
@@ -418,6 +418,9 @@ dataset_pipeline:
         - index: CPQ-2010102
           cols:
             ac_name: 兼职占一线服务费比
+        - index: Q-20704
+          cols:
+            ac_name: 汇流招聘
   - sort_by_columns:
       sort_list: [ac_code, ac_name, 合计]
 
@@ -431,7 +434,7 @@ dataset_pipeline:
         Q-20203, QAH-20203, Q-20204, QAH-20204, Q-205, IPQ-205, CPQ-205, Q-20501, Q-20502,
         Q-206, IPQ-206, CPQ-206, Q-20601, Q-20604, Q-20605,
         Q-207, CS-1034, QAH-207, IPQ-207, CPQ-207, Q-20701, C-103, QAH-20701, Q-20702,
-        C-104, QAH-20702, QS-1, IPQS-1
+        C-104, QAH-20702, Q-20704, QS-1, IPQS-1
       ]
 
   - row_int_format_by_index:
@@ -443,7 +446,7 @@ dataset_pipeline:
         Q-202, Q-20101, Q-20201, Q-20202, Q-20203, Q-20204,
         Q-205, Q-20501, Q-20502,
         Q-206, Q-20601, Q-20604, Q-20605,
-        Q-207, Q-20701, Q-20702, Q-701,
+        Q-207, Q-20701, Q-20702, Q-20704, Q-701,
         QSAO-10101014, QAO-1010101, QAO-1010102, QAO-1010103, QAO-1010104,
         QAO-20101, QAH-20101, QAH-202,QAH-20201, QAH-20202, QAH-20203, QAH-20204,
         QAH-207, QAH-20701, QAH-20702, QS-10101014, QS-2017, QS-1,Q-2010101,QAO-2010101,Q-2010102,QAO-2010102
