--- a/财报/21年财报/cookbook/summary/ac.yml
+++ b/财报/21年财报/cookbook/summary/ac.yml
@@ -150,6 +150,14 @@ dataset_pipeline:
         Q-21304: 0
         Q-214: 0
         Q-30108: 0
+        Q-20703: 0
+        Q-20704: 0
+        Q-2070301: 0
+        Q-2070302: 0
+        Q-2070303: 0
+        Q-3030201: 0
+        Q-3030202: 0
+        Q-3030203: 0
 
   - df_fillna:
       value: 0.0
@@ -179,7 +187,8 @@ dataset_pipeline:
                 {{Q-204}} = {{Q-20401}} + {{Q-20402}}
                 {{Q-205}} = {{Q-20501}} + {{Q-20502}}
                 {{Q-206}} = {{Q-20601}} + {{Q-20602}} + {{Q-20603}} + {{Q-20604}} + {{Q-20605}}
-                {{Q-207}} = {{Q-20701}} + {{Q-20702}}
+                {{Q-20703}} = {{Q-2070301}} + {{Q-2070302}} + {{Q-2070303}}
+                {{Q-207}} = {{Q-20701}} + {{Q-20702}} + {{Q-20703}} + {{Q-20704}}
                 {{Q-208}} = {{Q-20801}} + {{Q-20802}} + {{Q-20803}} + {{Q-20804}} + {{Q-20805}}
                 {{Q-21102}} = {{Q-2110201}} + {{Q-2110202}}
                 {{Q-211}} = {{Q-21101}} + {{Q-21102}}
@@ -187,6 +196,7 @@ dataset_pipeline:
                 {{Q-301}} = {{Q-30102}} + {{Q-30103}} + {{Q-30104}} + {{Q-30105}} + {{Q-30106}} + {{Q-30107}} + {{Q-30108}}
                 {{Q-30201}} = {{Q-3020101}} + {{Q-3020102}}
                 {{Q-302}} = {{Q-30201}} + {{Q-30202}} + {{Q-30203}} + {{Q-30204}} + {{Q-30205}} + {{Q-30206}} + {{Q-30207}} + {{Q-30208}} + {{Q-30209}} + {{Q-30210}}
+                {{Q-30302}} = {{Q-3030201}} + {{Q-3030202}} + {{Q-3030203}}
                 {{Q-303}} = {{Q-30301}} + {{Q-30302}} + {{Q-30303}}
                 {{QS-1000}} = {{Q-101}} + {{Q-102}} + {{Q-103}} + {{Q-104}}
                 {{QS-2000}} = {{Q-201}} + {{Q-202}} + {{Q-203}} + {{Q-204}} + {{Q-205}} + {{Q-206}} + {{Q-207}} + {{Q-208}} + {{Q-211}} + {{Q-212}} + {{Q-209}} + {{Q-210}} + {{Q-213}} + {{Q-214}}
@@ -443,9 +453,6 @@ dataset_pipeline:
         - index: Q-301
           cols:
             ac_name: 工资社保费用
-#        - index: Q-30101
-#          cols:
-#            ac_name:
         - index: Q-30102
           cols:
             ac_name: 工资
@@ -635,6 +642,30 @@ dataset_pipeline:
         - index: Q-30108
           cols:
             ac_name: 三线服务费
+        - index: Q-20703
+          cols:
+            ac_name: 招聘补贴
+        - index: Q-2070301
+          cols:
+            ac_name: 车补
+        - index: Q-2070302
+          cols:
+            ac_name: 房补
+        - index: Q-2070303
+          cols:
+            ac_name: 餐补
+        - index: Q-20704
+          cols:
+            ac_name: 汇流招聘
+        - index: Q-3030201
+          cols:
+            ac_name: 电子设备
+        - index: Q-3030202
+          cols:
+            ac_name: 办公家具
+        - index: Q-3030203
+          cols:
+            ac_name: 运输工具
 
   - df_fillna:
       value: 0
@@ -649,12 +680,12 @@ dataset_pipeline:
           Q-1040102,Q-1040103,Q-10402,Q-1040201,Q-1040202,Q-1040203,QS-2000,Q-201,Q-20101,Q-2010101,Q-2010102,Q-20102,Q-202,Q-20201,
           Q-20202,Q-20203,Q-20204,Q-20205,Q-203,Q-20301,Q-20302,Q-20303,Q-204,Q-20401,Q-2040101,Q-2040102,Q-20402,
           Q-2040201,Q-2040202,Q-205,Q-20501,Q-20502,Q-206,Q-20601,Q-20602,Q-20603,Q-20604,Q-20605,Q-207,Q-20701,
-          Q-20702,Q-208,Q-20801,Q-2080101,Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-20802,Q-2080201,Q-2080202,Q-20803,
+          Q-20702,Q-20703,Q-2070301,Q-2070302,Q-2070303,Q-20704,Q-208,Q-20801,Q-2080101,Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-20802,Q-2080201,Q-2080202,Q-20803,
           Q-2080301,Q-2080302,Q-2080303,Q-20804,Q-20805,Q-2080501,Q-2080502,Q-2080503,Q-2080504,Q-2080505,Q-2080506,Q-209,Q-210,
           Q-211,Q-21101,Q-21102,Q-2110201,Q-2110202,Q-212,Q-21201,Q-21202,Q-213,Q-21301,Q-21302,Q-21303,Q-21304,Q-214,
           QS-30101,Q-30101,QS-3000,Q-301,Q-30108,Q-30102,Q-30103,Q-30104,Q-30105,Q-30106,Q-30107,Q-302,Q-30201,
           Q-3020101,Q-3020102,Q-30202,Q-30203,Q-30204,Q-30205,Q-30206,Q-30207,Q-30208,Q-30209,Q-30210,Q-303,Q-30301,
-          Q-30302,Q-30303,QS-4000,Q-401,Q-402,Q-403,Q-404,Q-500,Q-600,QS-7000,Q-800,Q-900]
+          Q-30302,Q-3030201,Q-3030202,Q-3030203,Q-30303,QS-4000,Q-401,Q-402,Q-403,Q-404,Q-500,Q-600,QS-7000,Q-800,Q-900]
 
   - row_money_format_by_index:
       index_rows: [
@@ -669,7 +700,7 @@ dataset_pipeline:
           Q-303,Q-30301,Q-30302,Q-30303,QS-4000,Q-401,Q-402,Q-403,Q-404,Q-500,Q-600,QS-7000,Q-800,Q-900,Q-20205,
           Q-1030303,Q-2010101,Q-2010102,Q-2080101,Q-2080102,Q-2080103,Q-2080104,Q-2080105,Q-2080106,Q-2080301,Q-2080302,
           Q-2080303,Q-20805,Q-2080501,Q-2080502,Q-2080503,Q-2080504,Q-2080505,Q-2080506,Q-213,Q-21301,Q-21302,Q-21303,
-          Q-21304,Q-214,Q-30108,Q-2080201,Q-2080202
+          Q-21304,Q-214,Q-30108,Q-2080201,Q-2080202,Q-20703,Q-2070301,Q-2070302,Q-2070303,Q-20704,Q-3030201,Q-3030202,Q-3030203
       ]
 
   - df_rename_columns:
