--- a/财报/21年财报/cookbook/code/other/city.yml
+++ b/财报/21年财报/cookbook/code/other/city.yml
@@ -159,6 +159,10 @@ dataset_pipeline:
         C-603: 0
         Q-2010101: 0
         Q-2010102: 0
+        Q-20703: 0
+        Q-2070301: 0
+        Q-2070302: 0
+        Q-2070303: 0
 
   - df_fillna:
       value: 0.0
@@ -168,8 +172,9 @@ dataset_pipeline:
                 {{Q-205}} = {{Q-205}} + {{Q-20501}} + {{Q-20502}}
                 {{Q-20101}} = {{Q-20101}} + {{Q-2010101}} + {{Q-2010102}}
                 {{Q-202}} = {{Q-20201}} + {{Q-20202}} + {{Q-20203}} + {{Q-20204}}
-                {{Q-207}} = {{Q-20701}} + {{Q-20702}}
-                {{QS-1010203}} = {{Q-1010203}}
+                {{Q-20703}} = {{Q-2070301}} + {{Q-2070302}} + {{Q-2070303}}
+                {{Q-207}} = {{Q-20701}} + {{Q-20702}} + {{Q-20703}}
+                {{QS-1010203}} = {{Q-1010203}} + {{Q-1010101}}
                 {{QS-2017}} = {{Q-20101}} + {{Q-202}} + {{Q-207}} + {{Q-205}}
                 {{IPQ-205}} = {{Q-205}} / {{QS-1010203}}
                 {{CPQ-205}} = {{Q-205}} / {{QS-2017}}
@@ -346,6 +351,21 @@ dataset_pipeline:
         - index: Q-20502
           cols:
             ac_name: 房屋其他费用
+        - index: Q-1010101
+          cols:
+            ac_name: 基础收入
+        - index: Q-20703
+          cols:
+            ac_name: 招聘补贴
+        - index: Q-2070301
+          cols:
+            ac_name: 车补
+        - index: Q-2070302
+          cols:
+            ac_name: 房补
+        - index: Q-2070303
+          cols:
+            ac_name: 餐补
 
   - df_fillna:
       value: 0
@@ -355,9 +375,9 @@ dataset_pipeline:
 
   - sort_by_index:
       sort_list: [
-          QS-1010203,Q-1010203,Q-701,QS-2017,IPQS-2017,Q-20101,C-601,QAH-20101,IPQ-20101,CPQ-20101,Q-2010101,Q-2010102,Q-202,QAH-202,
-          IPQ-202,CPQ-202,Q-20201,QAH-20201,Q-20202,QAH-20202,Q-20203,QAH-20203,Q-20204,QAH-20204,Q-205,IPQ-205,CPQ-205,Q-20501,Q-20502,Q-207,CS-6023,
-          QAH-207,IPQ-207,CPQ-207,Q-20701,C-602,QAH-20701,Q-20702,C-603,QAH-20702,QS-1,IPQS-1
+          QS-1010203, Q-1010101, Q-1010203, Q-701, QS-2017, IPQS-2017, Q-20101, C-601, QAH-20101, IPQ-20101, CPQ-20101, Q-2010101, Q-2010102, Q-202, QAH-202,
+          IPQ-202, CPQ-202, Q-20201, QAH-20201, Q-20202, QAH-20202, Q-20203, QAH-20203, Q-20204, QAH-20204, Q-205, IPQ-205, CPQ-205, Q-20501, Q-20502, Q-207, CS-6023,
+          QAH-207, IPQ-207, CPQ-207, Q-20701, C-602, QAH-20701, Q-20702, C-603, QAH-20702, Q-20703, Q-2070301, Q-2070302, Q-2070303, QS-1, IPQS-1
       ]
 
   - row_int_format_by_index:
@@ -366,13 +386,13 @@ dataset_pipeline:
   - row_money_format_by_index:
       index_rows: [
           Q-1010203, Q-701, Q-20101, Q-202, Q-20201, Q-20202, Q-20203, Q-20204, Q-207, Q-20701, Q-20702,
-          QS-1010203, QS-2017, QS-1,Q-2010101,Q-2010102,Q-205,Q-20501,Q-20502,
-          QAH-20101, QAH-202, QAH-20201, QAH-20202, QAH-20203, QAH-20204, QAH-207, QAH-20701, QAH-20702
+          QS-1010203, QS-2017, QS-1, Q-2010101, Q-2010102, Q-205, Q-20501, Q-20502, Q-1010101,
+          QAH-20101, QAH-202, QAH-20201, QAH-20202, QAH-20203, QAH-20204, QAH-207, QAH-20701, QAH-20702, Q-20703, Q-2070301, Q-2070302, Q-2070303
       ]
 
   - row_pct_format_by_index:
       index_rows: [
-          IPQS-2017, IPQ-20101, CPQ-20101, IPQ-202, CPQ-202, IPQ-207, CPQ-207, IPQS-1,IPQ-205,CPQ-205
+          IPQS-2017, IPQ-20101, CPQ-20101, IPQ-202, CPQ-202, IPQ-207, CPQ-207, IPQS-1, IPQ-205, CPQ-205
       ]
 
   - df_rename_columns:
