--- a/财报/21年财报/cookbook/team/team.yml
+++ b/财报/21年财报/cookbook/team/team.yml
@@ -129,6 +129,9 @@ dataset_pipeline:
         C-702: 0
         Q-30108: 0
         C-708: 0
+        Q-3030201: 0
+        Q-3030202: 0
+        Q-3030203: 0
 
   - df_fillna:
       value: 0.0
@@ -145,6 +148,7 @@ dataset_pipeline:
                 {{Q-30201}} = {{Q-3020101}} + {{Q-3020102}}
                 {{Q-301}} = {{Q-30101}} + {{Q-30102}} + {{Q-30103}} + {{Q-30104}} + {{Q-30105}} + {{Q-30106}} + {{Q-30107}} + {{Q-30108}}
                 {{Q-302}} = {{Q-30201}} + {{Q-30202}} + {{Q-30203}} + {{Q-30204}} + {{Q-30205}} + {{Q-30206}} + {{Q-30207}} + {{Q-30208}} + {{Q-30209}} + {{Q-30210}}
+                {{Q-30302}} = {{Q-3030201}} + {{Q-3030202}} + {{Q-3030203}}
                 {{Q-303}} = {{Q-30301}} + {{Q-30302}} + {{Q-30303}}
                 {{QS-3013}} = {{Q-301}} + {{Q-302}} + {{Q-303}}
                 {{QS-4014}} = {{Q-401}} + {{Q-402}} + {{Q-403}} + {{Q-404}}
@@ -325,18 +329,28 @@ dataset_pipeline:
         - index: QAH-30103
           cols:
             ac_name: 三线服务费人均工资
+        - index: Q-3030201
+          cols:
+            ac_name: 电子设备
+        - index: Q-3030202
+          cols:
+            ac_name: 办公家具
+        - index: Q-3030203
+          cols:
+            ac_name: 运输工具
+
   - sort_by_columns:
       sort_list: [ ac_code, ac_name, 合计, 事业一部,事业二部, 事业三部]
 
   - sort_by_index:
       sort_list: [
-         QS-3013,Q-301,CPQ-301,Q-30101,C-701,QAH-30101,Q-30108,C-708,QAH-30103,Q-30102,C-702,QAH-30102,Q-30103,Q-30104,Q-30105,Q-30106,Q-30107,
-         Q-302,CPQ-302,Q-30201,C-703,QAH-3020101,Q-3020101,Q-3020102,Q-30202,Q-30203,Q-30204,Q-30205,Q-30206,Q-30207,
-         Q-30208,Q-30209,Q-30210,Q-303,CPQ-30301,Q-30301,Q-30302,Q-30303,QS-4014,Q-401,Q-2001,C-704,Q-2005,C-705,Q-402,
-         Q-403,Q-404,Q-500,Q-600,Q-700,Q-800,Q-900,C-706,C-707]
+         QS-3013, Q-301, CPQ-301, Q-30101, C-701, QAH-30101, Q-30108, C-708, QAH-30103, Q-30102, C-702, QAH-30102, Q-30103, Q-30104, Q-30105, Q-30106, Q-30107,
+         Q-302, CPQ-302, Q-30201, C-703, QAH-3020101, Q-3020101, Q-3020102, Q-30202, Q-30203, Q-30204, Q-30205, Q-30206, Q-30207,
+         Q-30208, Q-30209, Q-30210, Q-303, CPQ-30301, Q-30301, Q-30302, Q-3030201, Q-3030202, Q-3030203, Q-30303, QS-4014, Q-401, Q-2001, C-704, Q-2005, C-705, Q-402,
+         Q-403, Q-404, Q-500, Q-600, Q-700, Q-800, Q-900, C-706, C-707]
 
   - row_int_format_by_index:
-      index_rows: [C-701, C-702, C-703, C-704, C-705, C-706, C-707,C-708]
+      index_rows: [C-701, C-702, C-703, C-704, C-705, C-706, C-707, C-708]
 
   - row_pct_format_by_index:
       index_rows: [CPQ-301, CPQ-302, CPQ-30301]
@@ -346,7 +360,7 @@ dataset_pipeline:
           QS-3013, Q-301, Q-30101, QAH-30101, Q-30102, QAH-30102, Q-30103, Q-30104, Q-30105, Q-30106, Q-30107,
           Q-302, Q-30201, QAH-3020101, Q-3020101, Q-3020102, Q-30202, Q-30203, Q-30204, Q-30205, Q-30206, Q-30207,
           Q-30208, Q-30209, Q-30210, Q-303, Q-30301, Q-30302, Q-30303, QS-4014, Q-401, Q-2001, Q-2005, Q-402,
-          Q-403, Q-404, Q-500, Q-600, Q-700, Q-800, Q-900,Q-30108, QAH-30103
+          Q-403, Q-404, Q-500, Q-600, Q-700, Q-800, Q-900,Q-30108, QAH-30103, Q-3030201, Q-3030202, Q-3030203
       ]
 
   - df_rename_columns:
